--- a/mahmoudm/mahmouds.html
+++ b/mahmoudm/mahmouds.html
@@ -34,7 +34,7 @@
         
         
         <div id="jumbotron">
-        <h2>welcom to our website</h2>
+        <h2>مخلوف العرص يرحب بكمe</h2>
         <p>سنحاول العمل لأجلكم لعمل مستقبل افضل
             في خدمتكم اعطونا اموالكم لن نغفلكم التغفيل ليس من سماتنا
             اخلاقنا في السماء دموعنا مطر
